# nlp100-rust

./: .gitignore  Cargo.toml  LICENSE  README.md
commands/: chap02.sh
data/chap02_expected/: 19.txt
src/: lib.rs  main.rs
src/chapter01/: answer.rs
src/chapter01/answer/: mod.rs
src/chapter02/: answer.rs
src/chapter03/: answer.rs
src/chapter04/: answer.rs
