[package]
name = "nlp100-rust"
version = "0.1.0"
authors = ["Jun Ohtani <johtani@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.3"
env_logger = "*"
serde = "*"
serde_json = "*"
serde_derive = "*"
rand = "0.7.3"
flate2 = "1.0.14"
regex = "1.3.7"
reqwest = {version="0.10.8", features=["json"]}
tokio = "0.2.11"
async-trait = "0.1.40"